# esp-desktop-buddy

./: .gitignore  LICENSE  README.md  espcyd.md  sbom.yml
components/esp_desktop_buddy/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/esp_desktop_buddy/include/esp_desktop_buddy/: command_extensions.h  command_handlers.h  core.h  esp_desktop_buddy.h  events.h  permission.h  snapshot.h  transport_port.h  types.h
components/esp_desktop_buddy/private_include/: buddy_command_extensions_internal.h  buddy_internal.h
components/esp_desktop_buddy/src/: buddy_codec.c  buddy_command_extensions.c  buddy_core.c  buddy_linebuf.c  buddy_protocol.c  buddy_txq.c
components/esp_desktop_buddy/test_apps/core/: CMakeLists.txt  sdkconfig.defaults
components/esp_desktop_buddy/test_apps/core/main/: CMakeLists.txt  test_buddy_core.c
components/esp_desktop_buddy_folder_push/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/esp_desktop_buddy_transport_ble/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
docs/: getting-started.md  integration.md  testing.md
examples/: README.md
examples/assets/: README.md
examples/cyd_2432s028/: CMakeLists.txt  sdkconfig.defaults
examples/cyd_2432s028/main/: CMakeLists.txt  app_commands.c  app_commands.h  app_main.c  cyd_display.c  cyd_display.h  cyd_touch.c  cyd_touch.h  cyd_ui.c  cyd_ui.h  idf_component.yml
examples/esp_box_3_demo/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/esp_box_3_demo/main/: CMakeLists.txt  app_commands.c  app_main.c  app_shared.h  charpack_console.c  idf_component.yml  ui.c
examples/generic_headless/: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32c2
examples/generic_headless/main/: CMakeLists.txt  Kconfig.projbuild  app_commands.c  app_commands.h  app_main.c  generic_headless_led.c  generic_headless_led.h  idf_component.yml
examples/m5_dualkey_headless/: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32s3
examples/m5_dualkey_headless/main/: CMakeLists.txt  app_commands.c  app_commands.h  app_main.c  board_hw.c  board_hw.h  idf_component.yml
tools/: README.md
tools/tests/: ble_harness.py  ble_smoke.py
(+31 files in other folders)
