idf_component_register(
    SRCS
        "app_main.c"
        "app_commands.c"
        "cyd_display.c"
        "cyd_touch.c"
        "cyd_ui.c"
    INCLUDE_DIRS "."
    REQUIRES
        esp_desktop_buddy
        esp_desktop_buddy_transport_ble
        example_app_helpers
        example_status
        espressif__cjson
    PRIV_REQUIRES
        esp_driver_gpio
        esp_driver_spi
        freertos
        nvs_flash
)
